# SpotifyPredictor

./: .gitignore  README.md  app.py  charttheme.py  current_date.txt  data_analysis.py  data_preprocessor.py  derive_datasets.py  generate-derivative-data.py  pyproject.toml  requirements.txt  run-raspi.sh  streamlit_util.py  style-inject.css  test.py  util.py
.github/workflows/: timed_commit.yml
.streamlit/: config.toml
Data/: ArtistInfo.csv  FeatureImportance.csv  GenreInfo.csv  MaxChanges.csv  hash.txt
Models/A Capella/: forest.joblib  lasso.joblib
Models/All/: lasso.joblib
Models/Alternative/: forest.joblib  lasso.joblib
Models/Anime/: forest.joblib  lasso.joblib
Models/Blues/: forest.joblib  lasso.joblib
Models/Children's Music/: forest.joblib  lasso.joblib
Models/Classical/: forest.joblib  lasso.joblib
Models/Comedy/: forest.joblib  lasso.joblib
Models/Country/: forest.joblib  lasso.joblib
Models/Dance/: forest.joblib  lasso.joblib
Models/Electronic/: forest.joblib  lasso.joblib
Models/Folk/: forest.joblib  lasso.joblib
Models/Hip-Hop/: forest.joblib  lasso.joblib
Models/Indie/: forest.joblib  lasso.joblib
Models/Jazz/: forest.joblib  lasso.joblib
Models/Movie/: forest.joblib  lasso.joblib
Models/Opera/: forest.joblib  lasso.joblib
Models/Pop/: forest.joblib  lasso.joblib
Models/R&B/: forest.joblib  lasso.joblib
Models/Rap/: forest.joblib  (+1 more)
Modules/: __init__.py  chart_theme.py  data_preprocessor.py  data_utils.py  derive_datasets.py  learning.py  streamlit_util.py  tree_util.py  visualization_utils.py  visualizations.py
(+11 files in other folders)
